Fixed: Overflow issue

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -25,7 +25,7 @@ html, body {
     font-family: 'Roboto', sans-serif;
     height: 100%;
     margin: 0;
-    overflow-x: hidden;
+    overflow: hidden;
     scroll-behavior: smooth;
     user-select: none;
 }
